--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
     "bootstrap": "^5.1.3",
+    "i18next": "^21.7.1",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-xhr-backend": "^3.2.2",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
+    "react-i18next": "^11.16.9",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.4",
     "use-local-storage": "^2.3.6",
