role protected paths

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-REACT_APP_AUTH0_DOMAIN="dev-chzjoknr.us.auth0.com"
-REACT_APP_AUTH0_CLIENT_ID="Qa98UmqzTKcgW2D9PkwqmygJhOHoAjbg"
+REACT_APP_AUTH0_DOMAIN=dev-chzjoknr.us.auth0.com
+REACT_APP_AUTH0_CLIENT_ID=Qa98UmqzTKcgW2D9PkwqmygJhOHoAjbg
+REACT_APP_AUTH0_AUDIENCE=collection-manager-api.com.com
