--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.11.33",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "i18next": "^21.7.1",
     "i18next-browser-languagedetector": "^6.1.4",
