--- a/package.json
+++ b/package.json
@@ -11,24 +11,29 @@
     "@types/jest": "^27.5.0",
     "@types/node": "^16.11.33",
     "@types/react": "^18.0.9",
+    "@types/react-bootstrap-typeahead": "^5.1.8",
     "@types/react-dom": "^18.0.3",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "formik": "^2.2.9",
     "i18next": "^21.7.1",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-xhr-backend": "^3.2.2",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
+    "react-bootstrap-typeahead": "^6.0.0-alpha.11",
     "react-dom": "^18.1.0",
     "react-i18next": "^11.16.9",
+    "react-multi-select-component": "^4.2.5",
     "react-pro-sidebar": "^0.7.1",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.4",
     "use-local-storage": "^2.3.6",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
