--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.0",
+    "@types/markdown-it": "^12.2.3",
     "@types/node": "^16.11.33",
     "@types/react": "^18.0.9",
     "@types/react-bootstrap-typeahead": "^5.1.8",
@@ -19,12 +20,14 @@
     "i18next": "^21.7.1",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-xhr-backend": "^3.2.2",
+    "markdown-it": "^13.0.1",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
     "react-bootstrap-typeahead": "^6.0.0-alpha.11",
     "react-dom": "^18.1.0",
     "react-i18next": "^11.16.9",
+    "react-markdown-editor-lite": "^1.3.2",
     "react-multi-select-component": "^4.2.5",
     "react-pro-sidebar": "^0.7.1",
     "react-router-bootstrap": "^0.26.1",
