--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.6.4",
     "use-local-storage": "^2.3.6",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
@@ -64,6 +65,7 @@
   },
   "devDependencies": {
     "@types/react-router-bootstrap": "^0.24.5",
+    "@types/uuid": "^8.3.4",
     "netlify-cli": "^10.3.0"
   }
 }
