--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/markdown-it": "^12.2.3",
     "@types/node": "^16.11.33",
     "@types/react": "^18.0.9",
+    "@types/react-bootstrap-table-next": "^4.0.18",
     "@types/react-bootstrap-typeahead": "^5.1.8",
     "@types/react-dom": "^18.0.3",
     "axios": "^0.27.2",
@@ -24,6 +25,9 @@
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-filter": "^1.3.3",
+    "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-bootstrap-typeahead": "^6.0.0-alpha.11",
     "react-dom": "^18.1.0",
     "react-i18next": "^11.16.9",
@@ -64,6 +68,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-bootstrap-table2-filter": "^1.3.4",
+    "@types/react-bootstrap-table2-toolkit": "^2.1.6",
     "@types/react-router-bootstrap": "^0.24.5",
     "@types/uuid": "^8.3.4",
     "netlify-cli": "^10.3.0"
